# src/dto/device-command.mute.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsBoolean } from 'class-validator';
+
+export class DeviceCommandMuteDto {
+  @ApiProperty()
+  @IsBoolean()
+  readonly value: boolean;
+}
