# src/dto/device-command.volume.dto.ts
@@ -1,6 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
 import { IsInt, Max, Min } from 'class-validator';
 
-export class DeviceSetVolumeDto {
+export class DeviceCommandVolumeDto {
+  @ApiProperty()
   @IsInt()
   @Min(0)
   @Max(100)
