# src/dto/device.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class DeviceDetailDto {
+  @ApiProperty()
+  id: number;
+
+  @ApiProperty()
+  deviceName: string;
+}
