# src/dto/device.set-app.dto.ts
@@ -1,6 +1,0 @@
-import { IsNotEmpty } from 'class-validator';
-
-export class DeviceSetAppDto {
-  @IsNotEmpty()
-  readonly value: string;
-}
