# src/dto/device.set-mute.dto.ts
@@ -1,6 +1,0 @@
-import { IsBoolean } from 'class-validator';
-
-export class DeviceSetMuteDto {
-  @IsBoolean()
-  readonly value: boolean;
-}
