# src/dto/device.set-power.dto.ts
@@ -1,6 +1,0 @@
-import { IsIn } from 'class-validator';
-
-export class DeviceSetPowerDto {
-  @IsIn(['ON', 'OFF', 'TOGGLE'])
-  readonly state: 'ON' | 'OFF' | 'TOGGLE';
-}
